# L2DProject

./: .gitignore  Const.py  Face2DDraw.py  README.md  VTSprite.py  ValueUtils.py  bone_system.py  filters.py  implementation_plan.md  live2d.py  main.py  mainArcade.py  mesh_renderer.py  plan.md  pyproject.toml  response.py  task.md  tracker.py  walkthrough.md
.agent/rules/: coding_standard.md
.agent/skills/git-commit/: SKILL.md
.agent/workflows/: init.md
asset/: processing.kra  processing.kra~
assets/: .processing.kra-autosave.kra  hair_bones.json  hair_bonest.json  processing.kra  processing.kra~
assets/processed/: model_data.json
assets/raw/: EyeLashL.png~  EyeLashR.png~  EyeLidL.png~  EyeWhiteR.png~
assets/sample_model/: upscale_and_restore_face_alpha.png~
assets/sample_model/processed/: FrontHairLeft.json  model_data.json
assets/sample_model/raw/: EyeLidR.png~  EyeWhiteL.png~  Face.png~
docs/: Architecture.md  GOAL.md  TECHNICAL_NOTES.md  ToDoList.md  WalkThrough.md
practice/: create_mesh.py  rope_sim.py
src/: Const.py  create_mesh.py  debug_mesh.py  deformer.py  deformer_system.py  live2d.py  mainArcade.py  mesh_renderer.py  response.py  structure.md  tracker.py
src/practice/: face_deformer.py  pitch_test.py
tests/: test_deformer.py  test_live2d_part.py  verify_physics.py
tools/: cropper.py  face_register.py  jsonUtils.py  weight_editior.py
