[project]
name = "live2dproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arcade>=3.3.3",
    "mediapipe==0.10.9",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "protobuf<4",
    "pygame>=2.6.1",
    "pypubsub>=4.0.7",
    "scipy>=1.15.3",
    "shapely>=2.1.2",
    "triangle>=20250106",
]

[tool.black]
line-length = 88         # Default is 88, you can change it to 100 or 120
target-version = ['py310'] # Specify the Python versions to support
include = '\.pyi?$'      # Files to include (regex)
extend-exclude = '''     # Files or directories to exclude
^/external/
| ^/dist/
'''
